<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/timer_background"
        android:padding="8dp">

        <TextView
            android:id="@+id/digitalTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="36sp"
            tools:text="00:00:00" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playPauseButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/action_button_background"
                android:tint="@color/icon_tint_stateful"
                android:contentDescription="@string/play"
                android:scaleType="centerInside"
                android:src="@drawable/ic_play" />

            <ImageButton
                android:id="@+id/resetButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/action_button_background"
                android:tint="@color/icon_tint_stateful"
                android:contentDescription="@string/reset"
                android:scaleType="centerInside"
                android:src="@drawable/ic_reset" />

            <ImageButton
                android:id="@+id/presetButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/action_button_background"
                android:tint="@color/icon_tint_stateful"
                android:contentDescription="@string/preset_times"
                android:scaleType="centerInside"
                android:src="@drawable/ic_favorite"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/action_button_background"
                android:tint="@color/icon_tint_stateful"
                android:contentDescription="@string/settings"
                android:scaleType="centerInside"
                android:src="@drawable/ic_settings" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_close"
        android:background="@drawable/close_button_oval_background"
        android:tint="@color/icon_tint_stateful"
        android:scaleType="centerInside"
        android:layout_gravity="top|end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/close" />

</FrameLayout>
